examples/test/testpolicy18509.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18509
  namespace: namespace177
spec:
  podSelector:
    matchLabels:
      key3: value24
      key21: value1
      key28: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value8
      podSelector:
        matchLabels:
          key17: value37
          key39: value21
          key24: value2
